Fixed links page overflow width and improve Finance D link button.

--- a/src/routes/liens/Liens.css
+++ b/src/routes/liens/Liens.css
@@ -17,3 +17,7 @@
   height: auto;
   box-shadow: 1px 2px 10px rgba(0, 8, 27, .25);
 }
+
+.finance-d-screenshot:hover {
+  box-shadow: 1px 2px 7px rgba(0, 8, 27, .5);
+}
